--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,16 +4,16 @@
 </head>
 <body>
 <h1>Iniciar sesión</h1>
-<form th:action="@{/login}" th:object="${message}" method="POST">
+<form th:action="@{/login}" method="POST">
 	<div>
 	    <label for="usuario">Usuario: </label>
-	    <input type="text" id="usuario" name="usuario"/>
+	    <input type="text" id="nombre" name="nombre" placeholder="usuario"/>
     </div>
     <div>
 	    <label for="password">Contraseña: </label>
-	    <input type="password" id="password" name="password"/>
+	    <input type="password" id="password" name="password" placeholder="password"/>
     </div>
-    <input type="submit" value="Iniciar sesión" />
+    <button id="inicioSesionButton" type="submit">Iniciar sesion</button>
 </form>
 </body>
 </html>
