--- a/src/main/resources/templates/listaSugerencias.html
+++ b/src/main/resources/templates/listaSugerencias.html
@@ -6,10 +6,41 @@
 <title>Lista de sugerencias</title>
 </head>
 <body>
-	<form th:action="@{/logout}" method="POST"> 
-				<button id="logout" type="submit" name="logout">Cerrar sesión</button>
-	</form>
+	<div>
+		<form th:action="@{/logout}" method="POST"> 
+					<button id="logout" type="submit" name="logout">Cerrar sesión</button>
+		</form>
+	</div>
 	
+	<div>
+		<form th:action="@{/nuevaSugerencia}" method="POST"> 
+					<button id="nueva" type="submit" name="nueva">Nueva sugerencia</button>
+		</form>	
+	</div>
 	
+	<div th:id="todas">
+			<table>
+				<tr>
+					<th>Contenido</th>
+					<th></th>
+					<th>Usuario</th>
+					<th></th>
+				</tr>
+				<tr th:each="s : ${sugerencias}">	
+			                  <td th:text="${s.contenido}"></td>
+			                  <td></td>
+			                  <td th:text="${s.usuario.usuario}"/> 
+		       				  <td></td>
+		       				  <td>
+		       				  <form th:action="@{/mostrar(sugerencia=${s.id})}" method="POST">
+		       				  	<button id="ver" type="submit" name="ver" th:value="${s.contenido}">
+		       				  	Mostrar
+		       				  	</button>
+		       				 
+		       				  </form>
+		       				  </td> 
+				</tr>
+			</table>
+</div>
 </body>
 </html>
