--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 	    <input type="text" id="nombre" name="nombre" placeholder="usuario"/>
     </div>
     <div>
-	    <label for="password">Contraseña: </label>
+	    <label for="password">Contrasenia: </label>
 	    <input type="password" id="password" name="password" placeholder="password"/>
     </div>
     <button id="inicioSesionButton" type="submit">Iniciar sesion</button>
