Parte del administrador

--- a/src/main/resources/templates/añadirSugerencia.html
+++ b/src/main/resources/templates/añadirSugerencia.html
@@ -9,7 +9,7 @@
 	    <label for="contenido">Contenido: </label>
 	    <input type="text" id="contenido" name="contenido"/>
     </div>
-    <button id="nuevaSugerencia" type="submit">Añadir sugerencia</button>
+    <button id="nuevaSugerencia" type="submit">Nueva sugerencia</button>
 </form>
 </body>
 </html>
