Codificación para acentos y eliminacion mvnw del proyecto

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Iniciar sesión</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Iniciar sesiÃ³n</title>
 </head>
 <body>
-<h1>Iniciar sesión</h1>
+<h1>Iniciar sesiÃ³n</h1>
 <form th:action="@{/login}" method="POST">
 	<div>
 	    <label for="usuario">Usuario: </label>
