--- a/src/main/resources/templates/añadirSugerencia.html
+++ b/src/main/resources/templates/añadirSugerencia.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Anadir sugerencia</title>
 </head>
 <body>
