--- a/src/main/resources/templates/listaSugerenciasAdmin.html
+++ b/src/main/resources/templates/listaSugerenciasAdmin.html
@@ -1,8 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1"/>
-
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Lista de sugerencias</title>
 </head>
 <body>
