--- a/src/main/resources/templates/añadirComentario.html
+++ b/src/main/resources/templates/añadirComentario.html
@@ -3,14 +3,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Anadir Comentario</title>
 </head>
-<body>
-<h1>Nueva comentario</h1>
-<form th:action="@{/anadirComentario}" method="POST">
-	<div>
-	    <label for="contenido">Contenido: </label>
-	    <input type="text" id="contenido" name="contenido"/>
-    </div>
-    <button id="nuevaSugerencia" type="submit">Nuevo comentario</button>
-</form>
-</body>
+	<body>
+		<h1>Nueva comentario</h1>
+		<form th:action="@{/anadirComentario}" method="POST">
+			<div>
+				<table border="1">
+					<tr>
+				    	<td align="center"><label for="contenido">Contenido: </label></td>
+				    	<td align="center"><input type="text" id="contenido" name="contenido"/></td>
+				    </tr>
+				    <tr>
+				    	<td/>
+				    	<td align="center"><button id="nuevaSugerencia" type="submit">Nuevo comentario</button></td>
+				    </tr>
+			    </table>
+		    </div>
+		</form>
+	</body>
 </html>
