--- a/src/main/resources/templates/mostrarSugerenciaAdmin.html
+++ b/src/main/resources/templates/mostrarSugerenciaAdmin.html
@@ -17,11 +17,15 @@
 				<th>Contenido</th>
 				<th></th>
 				<th>Usuario</th>
+				<th>Apoyos</th>
+				<th>Rechazos</th>
 			</tr>
 			<tr>	
-		        <td th:text="${seleccionada.contenido}"/>
+		        <td th:text="${seleccionada.contents}" align="center"/>
 		        <td/>
-		        <td th:text="${seleccionada.usuario.usuario}"/>
+		        <td th:text="${seleccionada.user.username}" align="center"/>
+		        <td th:text="${seleccionada.getPositiveVotes()}" align="center"/>
+		        <td th:text="${seleccionada.getNegativeVotes()}" align="center"/>   
 			</tr>
 		</table>
 	</div>
@@ -34,21 +38,21 @@
 					<th></th>
 					<th>Usuario</th>
 				</tr>
-				<tr th:each="c : ${seleccionada.comentarios}">	
-			                  <td th:text="${c.contenido}"></td>
+				<tr th:each="c : ${seleccionada.comments}">	
+			                  <td th:text="${c.contents}" align="center"/>
 			                  <td></td>
-		       				  <td th:text="${c.usuario.usuario}"></td>
+		       				  <td th:text="${c.user.username}" align="center"/>
 		       				  <td></td>
-		       				  <td>
-		       				  <form th:action="@{/eliminarComentario(comentario=${c.id})}" method="POST">
-		       				  	<button id="ver" type="submit" name="ver" th:value="${c.contenido}">
-		       				  	Eliminar
-		       				  	</button>
-		       				 
-		       				  </form>
+		       				  <td align="center">
+			       				  <form th:action="@{/eliminarComentario(comentario=${c.id})}" method="POST">
+			       				  	<button id="ver" type="submit" name="ver" th:value="${c.contents}">
+			       				  	Eliminar
+			       				  	</button>
+			       				 
+			       				  </form>
 		       				  </td> 
 				</tr>
 			</table>
-</div>
-</body>
+		</div>
+	</body>
 </html>
