--- a/src/main/resources/templates/mostrarSugerenciaAdmin.html
+++ b/src/main/resources/templates/mostrarSugerenciaAdmin.html
@@ -32,13 +32,16 @@
 	
 	<div th:id="comentarios">
 		<h2>Comentarios</h2>
+			<form th:action="@{/ordenarPorFechaAdmin}" method="POST"> 
+					<button id="ordenarDate" type="submit" name="ordenarDate">Ordenar por fecha</button>
+			</form>
 			<table border="1">
 				<tr>
 					<th>Contenido</th>
 					<th></th>
 					<th>Usuario</th>
 				</tr>
-				<tr th:each="c : ${seleccionada.comments}">	
+				<tr th:each="c : ${comentarios}">	
 			                  <td th:text="${c.contents}" align="center"/>
 			                  <td></td>
 		       				  <td th:text="${c.user.username}" align="center"/>
